# WINGuard

./: .gitignore  AGENTS.md  CMakeLists.txt  INSTALL.md  QUICKSTART.md  README.md  SETUP.md  build.sh
.github/workflows/: ci.yml  release.yml
.project/: PROJECT_CONTEXT.md
docs/: ARCHITECTURE.md  README.md  USER_GUIDE.md  WING_SELECTED_CHANNEL_BRIDGE.md
include/internal/: managed_source_monitor.h  playback_naming.h  windows_ui_layout.h  wing_connector_dialog_macos.h
include/wingconnector/: reaper_extension.h  wing_config.h  wing_osc.h
packaging/: create_installer_windows.ps1  validate_windows_binary.ps1
releases/: README.md
src/core/: wing_osc.cpp
src/extension/: reaper_extension.cpp
src/ui/: wing_connector_dialog_macos.mm  wing_connector_dialog_windows.cpp
src/utilities/: wing_config.cpp
tests/: CMakeLists.txt  osc_address_probe.cpp  osc_probe.cpp  playback_naming_tests.cpp  source_monitor_tests.cpp  windows_ui_layout_tests.cpp  wing_config_tests.cpp
